2005-07-04  Riccardo Mottola  <rmottola@users.sf.net>

	* config/sparc/netbsd1/jit-md.h, 
	config/sparc/netbsd1/md.h:
	Changed macros to use ucontext_t instead of sigcontext. 
	Also unified them to use macros provided by netbsd that 
	are portable among different platforms to get SP and PC.

2005-07-03  Dalibor Topic  <robilad@kaffe.org>

	Updated the address of the FSF in the GPL,
	and all over the place.

2005-07-03  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-07-01  David Gilbert  <david.gilbert@object-refinery.com>

        * javax/swing/undo/UndoManager.java: fixed API doc links,
        * javax/swing/undo/UndoableEditSupport.java: likewise.

	2005-07-01  David Gilbert  <david.gilbert@object-refinery.com>

        * java/awt/RenderingHints.java: API doc updates.

	2005-07-01  Chris Burdess  <dog@gnu.org>

        * gnu/xml/dom/DomNode.java,
        gnu/xml/dom/html2/DomHTMLCollection.java,
        gnu/xml/dom/html2/DomHTMLElement.java,
        gnu/xml/dom/html2/DomHTMLTableElement.java,
        gnu/xml/dom/html2/DomHTMLTableRowElement.java,
        gnu/xml/dom/html2/DomHTMLTableSectionElement.java,
        gnu/xml/transform/NodeNumberNode.java,
        gnu/xml/transform/Stylesheet.java,
        gnu/xml/transform/TemplateNode.java,
        gnu/xml/xpath/NameTest.java,
        gnu/xml/xpath/NamespaceTest.java: Corrections for cases where
        elements/attributes might have been created in non-namespace-aware mode.
        * gnu/xml/transform/StreamSerializer.java: Only apply HTML attribute
        reduction when attribute is defined as a boolean in the HTML DTD.
        * gnu/xml/transform/TransformerImpl.java: Add support for output indenting
        and cdata-section-elements output instruction.

	2005-07-01  David Gilbert  <david.gilbert@object-refinery.com>

        * javax/swing/table/JTableHeader.java: added some API docs,
        * javax/swing/table/TableModel.java: fixed link in API docs,