@@ -18,6 +18,9 @@
 #include "i386/common.h"
 #include "i386/threads.h"
 
+#if defined(HAVE_SIGNAL_H)
+#include <signal.h>
+#endif
 #if defined(HAVE_SYS_RESOURCE_H)
 #include <sys/resource.h>
 #endif
@@ -28,17 +31,31 @@
 #include <unistd.h>
 #endif
 
+
+#include <sys/ucontext.h>
+
+/* older netbsd's could have this macro missing, so we provide it */
+#ifdef _UC_MACHINE_SP
+#define _UC_MACHINE_SP(uc)      ((uc)->uc_mcontext.__gregs[_REG_UESP])
+#endif
+#ifdef _UC_MACHINE_PC
+#define _UC_MACHINE_PC(uc)      ((uc)->uc_mcontext.__gregs[_REG_EIP])
+#endif
+
+
 /*
  * Redefine stack pointer offset.
  */
 #undef SP_OFFSET
 #define SP_OFFSET 2
 
-#define SIGNAL_ARGS(sig, sc) int sig, int __code, struct sigcontext *sc
-#define SIGNAL_CONTEXT_POINTER(scp) struct sigcontext *scp
+#define SIGCONTEXT ucontext_t
+
+#define SIGNAL_ARGS(sig, sc) int sig, siginfo_t *__si, void *sc
+#define SIGNAL_CONTEXT_POINTER(scp) SIGCONTEXT *scp
 #define GET_SIGNAL_CONTEXT_POINTER(sc) (sc)
-#define SIGNAL_PC(scp) (scp)->sc_pc
-#define STACK_POINTER(scp) (scp)->sc_sp
+#define SIGNAL_PC(scp) _UC_MACHINE_PC(((SIGCONTEXT *)(scp)))
+#define STACK_POINTER(scp) _UC_MACHINE_SP(((SIGCONTEXT *)(scp)))
 
 #if defined(TRANSLATOR)
 #include "jit-md.h"
